# cartographer

./: .gitignore  README.md  pyproject.toml
src/cartographer/: __init__.py  cli.py  config.py  mcp_server.py  watcher.py
src/cartographer/indexer/: history.py  plans.py  structure.py
src/cartographer/storage/: schema.py  store.py
src/cartographer/templates/: CLAUDE.md  mcp.json
src/graph_context/: cli.py  mcp_server.py  timeline.py  watcher.py
src/graph_context/plans/: manager.py
src/graph_context/storage/: store.py
src/graph_context/templates/: CLAUDE.md
tests/: test_lock_handling.py  test_mcp_watcher.py  test_migrate.py  test_timeline.py
tests/test_context/: test_context_generator.py
tests/test_indexer/: test_extractors.py
tests/test_mcp/: test_mcp_tools.py
tests/test_plans/: test_plan_manager.py
